--- a/leader.html
+++ b/leader.html
@@ -85,7 +85,7 @@
                     </font>
                     <br>
                     <font style="color: black;margin-left: 10px;">
-                        Quốc tịch: Nhật Bản
+                        Quốc tịch: VN
                     </font>
                     <br>
                     <font style="color: black;margin-left: 10px;">
