--- a/leader.html
+++ b/leader.html
@@ -89,7 +89,7 @@
                     </font>
                     <br>
                     <font style="color: black;margin-left: 10px;">
-                        Tên khác 
+                        Tên khác qa
                     </font>
                 </a>
             </div>
