--- a/leader.html
+++ b/leader.html
@@ -85,11 +85,11 @@
                     </font>
                     <br>
                     <font style="color: black;margin-left: 10px;">
-                        Quốc tịch: Nhật Bản
+                        Quốc
                     </font>
                     <br>
                     <font style="color: black;margin-left: 10px;">
-                        Tên khác 
+                        Tên khác LLLLLL
                     </font>
                 </a>
             </div>
