--- a/leader.html
+++ b/leader.html
@@ -85,15 +85,11 @@
                     </font>
                     <br>
                     <font style="color: black;margin-left: 10px;">
-                        Quốc
+                        Quốc tịch: Nhật Bản
                     </font>
                     <br>
                     <font style="color: black;margin-left: 10px;">
-<<<<<<< HEAD
-                        Tên khác LLLLLL
-=======
-                        Tên khác qa
->>>>>>> 413e758d9e696eefe6454c90fd2e43e0b3c73cc0
+                        Tên khác Tokuda Matsuki Umekichi
                     </font>
                 </a>
             </div>
