code resposive table and fullhd

--- a/contact.html
+++ b/contact.html
@@ -9,16 +9,18 @@
     <title>Document</title>
 </head>
 <body>
-      <!-- menu tren -->
-      <div style="margin-top: 0px;">
-        <div style="height: 100px;width: 100%; background-color: rgb(26, 27, 82); position: fixed;top: 0px;">
+    <div style="margin-top: 0px;">
+        <div class="menu_top">
             <div style="display: flex;align-items: center;justify-content: center;">
                 <a href="index.html">
-                    <img class="logo" src="logo/Akatsuki-Logo-PNG-Pic.png" alt="logo">
+                    <img class="logo" src="logo/512.png" alt="logo">
                 </a>
                 <a id="menu_items" href="index.html">TRANG CHỦ</a>
+
                 <div class="dropdown">
-                    <button class="dropbtn">TIN TỨC ></button>
+                    <a href="news.html">
+                        <button class="dropbtn">TIN TỨC ></button>
+                    </a>
                     <div class="dropdown-content">
                         <a href="">SINH VIÊN ĐÁNH NHAU</a>
                         <a href="">CON MÈO GẦN TRƯỜNG</a>
@@ -33,6 +35,7 @@
                         <a href="">TÁN GÁI TINDER</a>
                     </div>
                 </div>
+
                 <a href="">PHONG TRÀO TRONG THÁNG</a>
                 <div class="dropdown">
                     <button class="dropbtn">VỀ CHÚNG TÔI ></button>
