--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div style="height: 100px;width: 100%; background-color: rgb(26, 27, 82); position: fixed;top: 0px;">
             <div style="display: flex;align-items: center;justify-content: center;">
                 <a href="index.html">
-                    <img class="logo" src="logo/Akatsuki-Logo-PNG-Pic.png" alt="logo">
+                    <img class="logo" src="logo/512.png" alt="logo">
                 </a>
                 <a id="menu_items" href="index.html">TRANG CHỦ</a>
                 
