--- a/news.html
+++ b/news.html
@@ -13,7 +13,7 @@
 
 <body>
     <div style="margin-top: 0px;">
-        <div style="height: 100px;width: 100%; background-color: rgb(26, 27, 82); position: fixed;top: 0px;">
+        <div class="menu_top">
             <div style="display: flex;align-items: center;justify-content: center;">
                 <a href="index.html">
                     <img class="logo" src="logo/512.png" alt="logo">
@@ -70,7 +70,7 @@
                 style="font-size: 30px;font-weight: bold;font-family: Verdana, Geneva, Tahoma, sans-serif;color: black;">
                 Tin tức trong tuần</font>
         </div>
-        <hr width="60%">
+        <hr class="hr_fix">
     </div>
     <!-- content top -->
     <div style="height: 30px;">
@@ -80,13 +80,13 @@
         <div class="content_body_1">
             <div class="content_body_1_left">
                 <div align="left">
-                    <font style="color: black; font-size: 25px;font-weight: bold;">Sinh viên "Uống trà ăn bánh" trong
+                    <font class="font_content_body_1">Sinh viên "Uống trà ăn bánh" trong
                         giờ học bị cho học lại..?</font>
                     <br>
                     <br>
                 </div>
                 <div align="left">
-                    <font style="font-size: 18px;color: black;">Trà gừng có nhiều lợi ích tích cực đối với hệ thống tiêu
+                    <font class="font_content_body_1_body">Trà gừng có nhiều lợi ích tích cực đối với hệ thống tiêu
                         hóa, đặc biệt là làm dịu rối loạn tiêu hóa. Uống trà gừng mỗi ngày sẽ giúp cải thiện quá trình
                         trao đổi ...</font>
                     <br><br>
@@ -102,8 +102,8 @@
                 </div>
             </div>
             <div class="content_body_1_right">
-                <div style="height: 500px;width: 110%;background-color: rgb(255, 255, 255);">
-                    <iframe width="500px" height="100%" src="https://www.youtube.com/embed/rHKCWKZA6RI"
+                <div class="video_youtube">
+                    <iframe width="570px" height="100%" src="https://www.youtube.com/embed/rHKCWKZA6RI"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
@@ -269,7 +269,7 @@
     </div>
     <!-- content_body_1_end -->
     <br><br>
-    <hr style="width: 60%;">
+    <hr class="hr_fix">
     <br><br>
     <!-- content body 2 -->
     <div align="center">
@@ -361,24 +361,17 @@
     </div>
     <br>
     <br>
-    <hr style="width: 60%;">
+    <hr class="hr_fix">
     <br><br><br>
     <!-- content body 2 -->
     <!-- Contact news page and end-->
-    <div style="height: 10px;width: 100%; background-color: rgb(248, 177, 46);">
+    <div class="contact_end_page">
     </div>
     <div class="end_page">
-        <div class="end_page_contact">
-            <div class="end_page_contact_1">
-                <img src="logo/512.png" alt="" style="height: 300px;width: auto;">
-            </div>
-            <div style="margin-top: -190px;">
-                <div align="c">
-                    <font style="color: rgb(243, 179, 61); font-size: 20px;">
-                        Thông Tin Liên Hệ
-                    </font>
-                </div>
-            </div>
+            <div class="end_page_logo">
+                <img src="logo/512.png" alt="" class="logo_end">
+            </div>          
+                <div class="end_page_info">
         </div>
     </div>
     <!-- Contact news page and end -->
