--- a/leader.html
+++ b/leader.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="logo/512.png" type="image/icon type">
+    <link rel="stylesheet" href="news_page_style.css">
     <title>Lãnh đạo trường</title>
 </head>
 
@@ -233,8 +234,45 @@
     </div>
     <div style="height: 30px;">
     </div>
+</div>
 
+<!-- Contact news page and end -->
+    <div class="contact_end_page">
     </div>
+    <div class="end_page">
+        <div class="end_page_logo">
+            <img src="logo/512.png" alt="" class="logo_end">
+        </div>
+        <div class="end_page_info">
+            <div class="fix_position">
+                <font id="title_end_page">
+                    ĐỊA CHỈ VÀ CÁCH THỨC LIÊN HỆ
+                </font>
+                <br>
+                <br>
+                <br>
+                <font id="major_font_title">
+                    Cơ sở duy nhất tại Tp Hà Nội
+                </font>
+                <br>
+                <br>
+                <img src="logo/find-location.svg" alt="" id="logo_location">
+                <font id="font_location">69 Trần Duy Hưng - Tp Hà Nội.</font>
+                <br>
+                <br>
+                <img src="logo/icon-dien-thoai.png" alt="" id="logo_location">
+                <font id="font_location">0969669996.</font>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <font id="font_copyright">Copyright by Vịt Mập.</font>
+            </div>
+        </div>
+    </div>
+    <!-- Contact news page and end -->
 
     <!-- menu dưới -->
     <div style="margin-bottom: 0px;">
@@ -257,7 +295,7 @@
         </div>
     </div>
     <!-- menu dưới -->
-    </center>
+  
 </body>
 
 </html>
