--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
                     </div>
                 </div>
 
-                <a id="menu_items" href="">PHONG TRÀO TRONG THÁNG</a>
+                <a id="menu_items" href="event_of_this_month.html">PHONG TRÀO TRONG THÁNG</a>
                 <div class="dropdown">
                     <button class="dropbtn">VỀ CHÚNG TÔI ></button>
                     <div class="dropdown-content">
