--- a/good_boy.html
+++ b/good_boy.html
@@ -37,7 +37,7 @@
                     </div>
                 </div>
 
-                <a href="">PHONG TRÀO TRONG THÁNG</a>
+                <a href="event_of_this_month.html">PHONG TRÀO TRONG THÁNG</a>
                 <div class="dropdown">
                     <button class="dropbtn">VỀ CHÚNG TÔI ></button>
                     <div class="dropdown-content">
@@ -228,5 +228,34 @@
         </div>
     </div>
     <!-- menu dưới -->
+       <!-- Messenger Plugin chat Code -->
+       <div id="fb-root"></div>
+       <!-- Your Plugin chat code -->
+       <div id="fb-customer-chat" class="fb-customerchat">
+       </div>
+   
+       <script>
+           var chatbox = document.getElementById('fb-customer-chat');
+           chatbox.setAttribute("page_id", "108194641827698");
+           chatbox.setAttribute("attribution", "biz_inbox");
+       </script>
+       <!-- Your SDK code -->
+       <script>
+           window.fbAsyncInit = function () {
+               FB.init({
+                   xfbml: true,
+                   version: 'v13.0'
+               });
+           };
+   
+           (function (d, s, id) {
+               var js, fjs = d.getElementsByTagName(s)[0];
+               if (d.getElementById(id)) return;
+               js = d.createElement(s); js.id = id;
+               js.src = 'https://connect.facebook.net/vi_VN/sdk/xfbml.customerchat.js';
+               fjs.parentNode.insertBefore(js, fjs);
+           }(document, 'script', 'facebook-jssdk'));
+       </script>
+        <script src="https://uhchat.net/code.php?f=641e60"></script>
 </body>
 </html>
