--- a/news.html
+++ b/news.html
@@ -39,7 +39,7 @@
                     </div>
                 </div>
 
-                <a href="">PHONG TRÀO TRONG THÁNG</a>
+                <a href="event_of_this_month.html">PHONG TRÀO TRONG THÁNG</a>
                 <div class="dropdown">
                     <button class="dropbtn">VỀ CHÚNG TÔI ></button>
                     <div class="dropdown-content">
