--- a/index.html
+++ b/index.html
@@ -151,9 +151,7 @@
         </div>
     </div>
     <!-- item 1 -->
-    <div align="center">
-        <img src="postter/Cao-dang-thuc-hanh-FPT-Polytechnic.jpg" alt="" style="height: 250px; width: 100%;">
-    </div>
+   
     <div style="height: 30px;">
     </div>
      <!-- Contact news page and end-->
@@ -214,6 +212,7 @@
         </div>
     </div>
     <!-- menu dưới -->
+      
     <!-- Messenger Plugin chat Code -->
     <div id="fb-root"></div>
     <!-- Your Plugin chat code -->
@@ -242,6 +241,7 @@
             fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));
     </script>
+     <script src="https://uhchat.net/code.php?f=641e60"></script>
 </body>
 
 </html>
